--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
             <input type="text" id="input" placeholder="Search a word" />
             <button id="searchBtn">Search</button>
         </div>
-        <div id="suggestions" class="suggestions hidden"></div> <!-- New element for suggestions -->
+        <div id="suggestions" class="suggestions hidden"></div>
         <div id="meaning-container" class="hidden">
             <p><strong>Word:</strong> <span id="title">___</span></p>
             <p><strong>Meaning:</strong> <span id="meaning">___</span></p>
             <audio controls id="audio" class="hidden"></audio>
         </div>
     </div>
+    <footer class="footer">
+        <p>Created by Borislav Minkov © <span id="currentYear"></span></p>
+    </footer>
     <script src="index.js"></script>
 </body>
 
